# frappe-mcp-app

./: .gitignore  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
frappe_mcp_app/: hooks.py  mcp.py  modules.txt  package.json  patches.txt
frappe_mcp_app/config/: desktop.py  docs.py
frappe_mcp_app/frappe_mcp_app/: __init__.py
frappe_mcp_app/public/css/: frappe_mcp_app.css
frappe_mcp_app/public/js/: frappe_mcp_app.js
frappe_mcp_app/www/: __init__.py
